feat: home page

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -41,7 +41,7 @@
 
 <hr class="body-divider">
 
-<main id="main">
+<main id="main" layout:fragment="main">
     <p>Page content goes here</p>
 </main>
 
