--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -59,3 +59,52 @@ form label,
 form button {
     margin: 1em 0;
 }
+
+
+.item {
+    margin: 5px 0;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.item .description {
+    flex-grow: 1;
+}
+
+.item .date {
+    font-size: x-small;
+    font-weight: bold;
+}
+
+.item.done {
+    color: slategray;
+    text-decoration: line-through;
+}
+
+.item.htmx-swapping {
+    opacity: 0;
+    transition: opacity 1s ease-out;
+}
+
+
+.loader {
+    text-align: center;
+}
+
+.htmx-indicator {
+    display: none;
+}
+
+.htmx-request .htmx-indicator {
+    display: inline;
+}
+
+
+i.fa-trash-can {
+    color: red;
+}
+
+i.fa-xmark {
+    color: darkred;
+}
