--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8">
@@ -22,10 +23,10 @@
     <nav x-data="{ tab: window.location.pathname.substring(1) || 'home' }"
          x-on:tab-change.window="tab = $event.detail.value">
         <div id="nav-home">
-            <a hx-get="/home" hx-push-url="true" hx-target="#main">Home</a> |
-            <a hx-get="/tasks" hx-push-url="true" hx-target="#main">Tasks</a>
+            <a hx-get="/home" hx-push-url="true" hx-target="main">Home</a> |
+            <a hx-get="/tasks" hx-push-url="true" hx-target="main">Tasks</a>
         </div>
-        <div id="nav-search">
+        <div id="nav-search" sec:authorize="isAuthenticated()">
             <input x-show="tab === 'tasks'"
                    type="search"
                    name="search"
@@ -34,15 +35,20 @@
                    hx-trigger="input changed delay:500ms, search"
                    hx-target="#tasks">
         </div>
-        <div id="nav-user">
-            Hi User
+        <div id="nav-user" sec:authorize="isAuthenticated()">
+            Hi <span sec:authentication="principal.planner.name">User</span> |
+            <a hx-post="/logout">Log out</a>
+        </div>
+        <div id="nav-login" sec:authorize="isAnonymous()">
+            <a hx-get="/signup" hx-push-url="true" hx-target="main">Sign up</a> |
+            <a hx-get="/login" hx-push-url="true" hx-target="main">Log in</a>
         </div>
     </nav>
 </header>
 
 <hr class="body-divider">
 
-<main id="main" layout:fragment="main">
+<main layout:fragment="main">
     <p>Page content goes here</p>
 </main>
 
