feat: error handling

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,6 +7,7 @@
 <head hx-head="merge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="htmx-config" content='{"allowNestedOobSwaps":false}'>
 
     <meta name="csrf-token" th:content="${_csrf.token}"/>
     <meta name="csrf-header" th:content="${_csrf.headerName}"/>
