refactor: thymeleaf htmx namespace

--- a/src/main/resources/templates/items/edit.html
+++ b/src/main/resources/templates/items/edit.html
@@ -1,18 +1,18 @@
 <div class="item" th:classappend="${item.done ? 'done' : 'todo'}">
     <input class="description"
            name="description"
-           placeholder="just type and hit enter..."
            th:value="${item.description}"
+           placeholder="just type and hit enter..."
            autofocus
+           th:hx-put="@{/items/{id} (id=${item.id})}"
+           hx:vals="${ {done: item.done} }"
            hx-trigger="keyup[key=='Enter' && this.value.trim() !== '']"
-           hx:put="@{/items/{id}(id=${item.id})}"
-           hx:vals="${ {done: item.done } }"
            hx-target="closest .item"
            hx-swap="outerHTML"/>
 
     <button title="Cancel"
+            th:hx-get="@{/items/{id} (id=${item.id})}"
             hx-trigger="click, blur from:.description, keyup[key=='Escape'] from:body"
-            hx:get="@{/items/{id}(id=${item.id})}"
             hx-target="closest .item"
             hx-swap="outerHTML">
         <i class="fa-solid fa-xmark"></i>
