refactor: patch task

--- a/src/main/resources/templates/items/edit.html
+++ b/src/main/resources/templates/items/edit.html
@@ -4,8 +4,7 @@
            th:value="${item.description}"
            placeholder="just type and hit enter..."
            autofocus
-           th:hx-put="@{/items/{id} (id=${item.id})}"
-           hx:vals="${ {done: item.done} }"
+           th:hx-patch="@{/items/{id} (id=${item.id})}"
            hx-trigger="keyup[key=='Enter' && this.value.trim() !== '']"
            hx-target="closest .item"
            hx-swap="outerHTML"/>
