--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -9,7 +9,7 @@
 
         <form hx-post="/login" hx-on::after-request="resetForm(event)">
             <label>
-                Email <input type="email" name="email" th:value="${email}" placeholder="Email" required autofocus>
+                Email <input type="email" name="email" placeholder="Email" required autofocus>
             </label>
             <label>
                 Password <input type="password" name="password" placeholder="Password" required>
