refactor: tasks url

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -43,7 +43,7 @@
                    type="search"
                    name="search"
                    placeholder="begin typing to search..."
-                   hx-get="/items"
+                   hx-get="/tasks"
                    hx-trigger="input changed delay:500ms, search"
                    hx-target="#tasks">
         </div>
