--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -68,6 +68,10 @@ form button {
     gap: 5px;
 }
 
+.item .name {
+    font-style: italic;
+}
+
 .item .description {
     flex-grow: 1;
 }
@@ -77,7 +81,8 @@ form button {
     font-weight: bold;
 }
 
-.item.done {
+.item.done,
+.item.disabled {
     color: slategray;
     text-decoration: line-through;
 }
