feat: users search

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -105,6 +105,10 @@ form button {
     display: inline;
 }
 
+[x-cloak] {
+    display: none !important;
+}
+
 
 #error span {
     white-space: pre-line;
