refactor: base layout

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -15,6 +15,7 @@
     <script defer src="/webjars/htmx.org/2.0.3/dist/htmx.min.js"></script>
     <script defer src="/webjars/htmx-ext-head-support/2.0.2/head-support.js"></script>
     <script defer src="/webjars/alpinejs/3.14.3/dist/cdn.min.js"></script>
+
     <script>
       document.addEventListener('htmx:configRequest', (event) => {
         const header = htmx.find('meta[name=csrf-header]')?.content;
@@ -31,43 +32,9 @@
 </head>
 
 <body hx-ext="head-support">
+
 <header>
-    <nav x-data="{ tab: window.location.pathname.substring(1) || 'home' }"
-         x-init="$watch('tab', _ => htmxProcessSearch())"
-         x-on:tab-change.window="tab = $event.detail.value">
-        <div id="nav-home">
-            <a hx-get="/home" hx-push-url="true" hx-target="main">Home</a> |
-            <a hx-get="/tasks" hx-push-url="true" hx-target="main">Tasks</a>
-            <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                | <a hx-get="/users" hx-push-url="true" hx-target="main">Users</a>
-            </th:block>
-        </div>
-        <div id="nav-search">
-            <input x-cloak
-                   x-show="tab === 'tasks' || tab === 'users'"
-                   type="search"
-                   name="search"
-                   placeholder="begin typing to search..."
-                   x-bind:hx-get="'/'+tab"
-                   hx-trigger="input changed delay:500ms, search"
-                   x-bind:hx-target="'#'+tab">
-        </div>
-        <div id="nav-user" sec:authorize="isAuthenticated()">
-            Hi <span sec:authentication="principal.user.name">User</span> |
-            <a hx-post="/logout">Log out</a>
-        </div>
-        <div id="nav-login" sec:authorize="isAnonymous()">
-            <a hx-get="/signup" hx-push-url="true" hx-target="main">Sign up</a> |
-            <a hx-get="/login" hx-push-url="true" hx-target="main">Log in</a>
-        </div>
-    </nav>
-    <script>
-      function htmxProcessSearch() {
-        const search = htmx.find('input[type=search]');
-        search.value = '';
-        htmx.process(search);
-      }
-    </script>
+    <th:block th:insert="~{nav}"></th:block>
 </header>
 
 <hr class="body-divider">
@@ -81,6 +48,7 @@
 <footer>
     <span>This is <a href="https://cs50.harvard.edu/x/" target="_blank">CS50</a> Final Project</span>
 </footer>
+
 </body>
 
 </html>
