feat: home info

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="/css/no-class.css">
     <link rel="stylesheet" href="/css/custom.css">
 
-    <title>To Do List</title>
+    <title>to-do list</title>
 </head>
 
 <body hx-ext="head-support">
