--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -4,8 +4,15 @@
       layout:fragment="main">
 
     <th:block th:fragment="content">
-        <h1>home</h1>
+        <h1>hello, world</h1>
         <aside id="error"></aside>
+
+        <img src="/images/ddb50.svg" alt="CS50 Duck Debugger" width="256">
+
+        <p class="info">
+            This is <a href="https://cs50.harvard.edu/x/" target="_blank">CS50</a> Final Project, the Harvard
+            University’s introduction to the intellectual enterprises of computer science and the art of programming.
+        </p>
     </th:block>
 
 </main>
