Revert "feat: check for known security errors at login"
This reverts commit 6d7e64fd47282e54fc1e37a49f65d2faf6822786.

--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -5,9 +5,7 @@
 
     <th:block th:fragment="content">
         <h1>log in</h1>
-        <aside id="error">
-            <span th:text="${message}"></span>
-        </aside>
+        <aside id="error"></aside>
 
         <form hx-post="/login" hx-on::after-request="resetForm(event)">
             <label>
