feat: check for errors at login

--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -5,7 +5,12 @@
 
     <th:block th:fragment="content">
         <h1>log in</h1>
-        <aside id="error"></aside>
+        <aside id="error">
+            <template hx-get="/error"
+                      hx-trigger="load delay:10ms"
+                      hx-on::config-request="addQueryParams(event)">
+            </template>
+        </aside>
 
         <form hx-post="/login" hx-on::after-request="resetForm(event)">
             <label>
@@ -18,6 +23,15 @@
         </form>
 
         <script>
+          function addQueryParams(event) {
+            if (window.location.search) {
+              event.detail.parameters = Object.fromEntries(new URLSearchParams(window.location.search));
+            } else {
+              event.preventDefault();
+              event.target.remove();
+            }
+          }
+
           function resetForm(event) {
             const password = htmx.find(event.target, 'input[name=password]');
             password.value = '';
